--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   },
   "homepage": "https://github.com/ProxDouglas/Desenvolvimento_Web_E_coemmerce#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "4.7",
     "mongoose": "^6.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^1.3.3"
   }
 }
