--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.7",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
