--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "swagger-autogen": "node src/swagger.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.7",
     "mongoose": "^6.4.1",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "swagger-autogen": "^2.21.3"
+    
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
