--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.7",
     "mongoose": "^6.4.1",
-    "swagger-ui-express": "^4.4.0",
-    "swagger-autogen": "^2.21.3"
-    
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.0",
+    "swagger-autogen": "^2.21.3",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
