--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ProxDouglas/Desenvolvimento_Web_E_coemmerce#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
@@ -28,6 +29,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.7",
     "mongoose": "^6.4.1",
