--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.7",
     "mongoose": "^6.4.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
